--- a/bio.html
+++ b/bio.html
@@ -16,6 +16,15 @@
             <a href="index.html">Home</a>
           </div>
     </header>
+    <footer>
+        <div class="footer">
+            <a href="https://twitter.com/aliciasilverio_" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com/in/alicia-silverio-/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/aliciasilverio" target="_blank">GitHub</a>
+            <a href="mailto:aliciaalicia2455@gmail.com" target="_blank">Email</a>
+            <a href="https://www.instagram.com/aliciaxsilverio/" target="_blank">Instagram</a>
+        </div>
+    </footer>
 <script src="app.js"></script>
 </body>
-</html>
+</html> 
