--- a/bio.html
+++ b/bio.html
@@ -13,9 +13,17 @@
             <a href="projects.html">Projects</a>
             <a class="active" href="bio.html">Bio</a>
             <a href="resume.html">Resume</a>
-            <a href="index.html">Home</a>
+            <a href="index.html">Home</a> 
           </div>
     </header>
+        <section id="about-me">
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum neque egestas congue quisque egestas diam in arcu. Massa tincidunt dui ut ornare. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Cursus metus aliquam eleifend mi in nulla posuere. A pellentesque sit amet porttitor eget dolor morbi non arcu. Ipsum a arcu cursus vitae. Vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor. Enim lobortis scelerisque fermentum dui faucibus in ornare. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Porttitor massa id neque aliquam.
+
+            Ut aliquam purus sit amet luctus venenatis lectus magna fringilla. In eu mi bibendum neque egestas. Ut tellus elementum sagittis vitae et leo. Iaculis eu non diam phasellus vestibulum lorem. Imperdiet sed euismod nisi porta lorem mollis. Tristique sollicitudin nibh sit amet. Libero enim sed faucibus turpis in eu. In vitae turpis massa sed elementum. Varius sit amet mattis vulputate enim nulla aliquet porttitor. Cum sociis natoque penatibus et magnis dis. Dui accumsan sit amet nulla facilisi morbi tempus iaculis urna. Ut lectus arcu bibendum at varius vel pharetra. Orci dapibus ultrices in iaculis nunc. Porta lorem mollis aliquam ut. Id aliquet risus feugiat in ante metus. Amet volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Luctus accumsan tortor posuere ac ut consequat semper viverra nam. Odio pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus.
+                
+            Eu feugiat pretium nibh ipsum consequat nisl vel pretium. Egestas dui id ornare arcu. Nulla pellentesque dignissim enim sit amet venenatis urna cursus eget. Tincidunt dui ut ornare lectus sit amet. Purus ut faucibus pulvinar elementum integer enim neque volutpat ac. Est velit egestas dui id. Faucibus nisl tincidunt eget nullam non nisi est. Aliquet sagittis id consectetur purus ut faucibus pulvinar elementum integer. Quam id leo in vitae turpis. Ultrices gravida dictum fusce ut placerat orci nulla. Suspendisse in est ante in nibh mauris cursus mattis molestie. Vel quam elementum pulvinar etiam non quam lacus suspendisse. Senectus et netus et malesuada fames ac. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat in.</p>
+        </section>
     <footer>
         <div class="footer">
             <a href="https://twitter.com/aliciasilverio_" target="_blank">Twitter</a>
