--- a/bio.html
+++ b/bio.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header class="my-header">
-        <div class="top-navbar">
+        <div class="navbar">
             <a href="projects.html">Projects</a>
             <a class="active" href="bio.html">Bio</a>
             <a href="resume.html">Resume</a>
             <a href="index.html">Home</a> 
           </div>
     </header>
+    
         <section id="about-me">
             <h1>About Me</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum neque egestas congue quisque egestas diam in arcu. Massa tincidunt dui ut ornare. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Cursus metus aliquam eleifend mi in nulla posuere. A pellentesque sit amet porttitor eget dolor morbi non arcu. Ipsum a arcu cursus vitae. Vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor. Enim lobortis scelerisque fermentum dui faucibus in ornare. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Porttitor massa id neque aliquam.
