--- a/bio.html
+++ b/bio.html
@@ -23,6 +23,7 @@
         <section id="about-me">
             <h1>About Me</h1>
             <p>I am an Atlanta-based Software Engineer. Excited to put my skills to use!</p>
+            <img class="coder-girl" src="codingaesthetic.jpeg" width="50%" height="50%">
         </section>
     <footer>
         <div class="footer">
